# cobalt-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  TODO.md  appveyor.yml  index.html  search-index.js
cobalt/: ClientEvent.t.html  ConnectionEvent.t.html  ConnectionMap.t.html  MessageKind.t.html  PacketModifier.t.html  ServerEvent.t.html  enum.ClientEvent.html  enum.ConnectionEvent.html  enum.ConnectionState.html  enum.MessageKind.html  enum.ServerEvent.html  index.html  sidebar-items.js  struct.BinaryRateLimiter.html  struct.Client.html  struct.Config.html  struct.Connection.html  struct.ConnectionID.html  struct.NoopPacketModifier.html  struct.Server.html  struct.UdpSocket.html  trait.PacketModifier.html  trait.RateLimiter.html  trait.Socket.html  type.ConnectionMap.html
cobalt/client/: enum.ClientEvent.html  struct.Client.html
cobalt/server/: enum.ServerEvent.html  struct.Server.html
cobalt/shared/binary_rate_limiter/: BinaryRateLimiter.t.html  struct.BinaryRateLimiter.html
cobalt/shared/config/: struct.Config.html
examples/: basic.rs  client.rs  server.rs
implementors/cobalt/: trait.PacketModifier.js
implementors/rand/: trait.Rng.js
src/: client.rs  client_stream.rs  lib.rs  server.rs  server_stream.rs  tick.rs
src/client/: client.rs  mod.rs
src/cobalt/: client.rs.html  lib.rs.html  server.rs.html
src/server/: mod.rs  server.rs
src/shared/: binary_rate_limiter.rs  config.rs  connection.rs  handler.rs  message_queue.rs  mod.rs  noop_packet_modifier.rs  socket.rs  stats.rs  tick.rs  ticker.rs  udp_socket.rs
src/test/: client.rs  connection.rs  message_queue.rs  mock.rs  mock_socket.rs  mod.rs  server.rs
src/tests/: client.rs  client_stream.rs  connection.rs  message_queue.rs  mock.rs  server.rs
src/traits/: handler.rs  mod.rs  packet_modifier.rs  rate_limiter.rs  socket.rs
tests/: lib.rs  mock.rs
(+45 files in other folders)
