[package]
name = "cobalt"
version = "0.5.3"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
description="A low level, UDP based networking library."
documentation = "https://bonsaiden.github.io/cobalt-rs/doc/cobalt"
repository = "https://github.com/BonsaiDen/cobalt-rs.git"
readme = "README.md"
keywords = [ "virtual", "udp", "connection", "message", "queue"]
license="MIT"

[dependencies]
clock_ticks = "~0.1.0"
rand = "~0.3.13"

[features]
packet_handler_lost = []
packet_handler_compress = []
all = ["packet_handler_lost", "packet_handler_compress"]

