[package]
name = "cobalt"
version = "0.22.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
description="Low level, UDP based networking library."
documentation = "https://bonsaiden.github.io/cobalt-rs/doc/cobalt"
repository = "https://github.com/BonsaiDen/cobalt-rs.git"
readme = "README.md"
keywords = [ "virtual", "udp", "connection", "message", "queue"]
categories = ["network-programming"]
license = "MIT/Apache-2.0"

[dependencies]
rand = "0.3.14"
clippy = { version = "*", optional = true }

[features]
lint = ["clippy"]

